--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 *{
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  list-style-type: none;
+  list-style: none;
   text-decoration: none;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
