--- a/src/style/loader.module.css
+++ b/src/style/loader.module.css
@@ -1,26 +1,31 @@
-/* HTML: <div class="loader"></div> */
 .loader {
-    width: 50px;
-    aspect-ratio: 1;
-    display: grid;
-    border: 4px solid #0000;
+    width: 48px;
+    height: 48px;
     border-radius: 50%;
-    border-right-color: #25b09b;
-    animation: l15 1s infinite linear;
-  }
-  .loader::before,
-  .loader::after {    
-    content: "";
-    grid-area: 1/1;
-    margin: 2px;
-    border: inherit;
-    border-radius: 50%;
-    animation: l15 2s infinite;
+    display: inline-block;
+    border-top: 4px solid #000000;
+    border-right: 4px solid transparent;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
   }
   .loader::after {
-    margin: 8px;
-    animation-duration: 3s;
+    content: '';  
+    box-sizing: border-box;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    border-left: 4px solid #FF3D00;
+    border-bottom: 4px solid transparent;
+    animation: rotation 0.5s linear infinite reverse;
   }
-  @keyframes l15{ 
-    100%{transform: rotate(1turn)}
-  }
+  @keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } 
